--- a/Task01_sab6743/DotsAndLines.html
+++ b/Task01_sab6743/DotsAndLines.html
@@ -17,10 +17,10 @@
     Please use a browser that supports "canvas"
     </canvas>
 
-    <script src="../lib/webgl-utils.js"></script>
-    <script src="../lib/webgl-debug.js"></script>
-    <script src="../lib/cuon-utils.js"></script>
-    <script src="../lib/cuon-matrix-quat03.js"></script>
+    <script src="./lib/webgl-utils.js"></script>
+    <script src="./lib/webgl-debug.js"></script>
+    <script src="./lib/cuon-utils.js"></script>
+    <script src="./lib/cuon-matrix-quat03.js"></script>
     <script src="DotsAndLines.js"></script>
   </body>
 </html>
